# Snake

./: .gitignore  Cargo.toml  README.md
docs/: file_structure.md
src/: main.rs
src/game/: components.rs  constants.rs  messages.rs  mod.rs  resources.rs  state.rs
src/game/systems/: common.rs  effects.rs  gameplay.rs  input.rs  mod.rs  perf.rs  reset.rs  setup.rs  ui.rs
