[package]
name = "Snake"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"

# 1. 优化所有第三方依赖（包括 Bevy 本身）
# 这能让你的游戏在开发模式下运行得飞快，CPU 占用大幅下降
[profile.dev.package."*"]
opt-level = 3

# 2. 对你自己的代码进行基础优化
[profile.dev]
opt-level = 1

# 3. 编译发布版本时的极致优化
[profile.release]
lto = true          # 链接时优化，减小体积
codegen-units = 1   # 提高运行速度